# ember

./: .gitignore  TODO.md  check_globals  check_globals.c  meson.build
include/: backend.h  ember.h  input.h  protocol.h  renderer.h
include/wayland/: protocols.h
src/: main.c
src/backend/: drm.c  egl.c  output.c  renderer.c
src/input/: cursor.c  dispatch.c  input.c  seat.c
src/wayland/: compositor.c  data_device.c  seat.c  shell.c  shm.c
